# Facial-Emotion-Recognition-System

./: Dockerfile  README.md  Requirements.txt  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
benchmarks/: benchmark_report.md
docs/: AUDIT.md  BENCHMARKING.md  DEPLOYMENT.md
src/api/: main.py  validation.py
src/pipeline/: inference.py
src/src/config/: settings.py
src/src/llm_explainer/: explain.py
src/src/modeling/: model.py
src/src/rag/: context_retriever.py
tests/production/: test_benchmark.py  test_context.py  test_settings.py  test_validation.py
